--- a/style.css
+++ b/style.css
@@ -1,231 +1,245 @@
+@media only screen and (min-width: 320px)
+{
+    html
+    {
+        font-size: 8px;
+    }
+    *{
+        font-family: "Helvetica Neue",Helvetica,"Open Sans",sans-serif;
+    }
+    body
+    {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+    }
+    .header,
+    .section-1,
+    .section-4,
+    .footer
+    {
+        padding-left: 14%;
+        padding-right: 14%;
+    }
+    .section-2
+    {
+        padding-left: 22.5%;
+        padding-right: 22.5%;
+        background-color: white;
+    }
+    .section-3
+    {
+        padding-left: 25%;
+        padding-right:20%;
+    }
+    .header,
+    .section-1
+    {
+        background-color: #1F2937;
+    }
+    .header
+    {
+        padding-top: 0.5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .header-logo
+    {
+        font-size: 2.5rem;
+        font-weight: bold;
+        color: #F9FAF8
+    }
+    .subtext
+    {
+        line-height: 1.5rem;
+    }
+    .header-link, 
+    .section-1 .subtext
+    {
+        font-size: 1.4rem;
+        color: #E5E7EB;
+        line-height: 2rem;
+    }
+    ul
+    {
+        list-style-type: none;
+        display: flex;
+        gap: 1.5rem;
+    }
+    a
+    {
+        text-decoration: none;
+    }
+    .section-1
+    {
+        display: flex;
+        justify-content: space-between;
+        gap: 2rem;
+        padding-top: 6.5rem;
+        padding-bottom: 6.5rem;
+    }
+    .section-1 .left .title
+    {
+        font-size: 3rem;
+        font-weight: 800;
+        color: #F9FAF8;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+    }
+    button
+    {
+        background-color: transparent;
+        border-radius: 0.5rem;
+        font-weight: bold;
+        font-size: 1.125rem;
+        padding: 0.5rem 2rem;
+        color: #F9FAF8;
+    }
+    .section-1 .left button
+    {
+        background-color: #3882F6;
+        border: transparent;
+        margin-top: 3rem;
+    }
+    .img-container
+    {
+        height: 21.875rem;
+    }
+    .img-container img
+    {
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .section-2 .title
+    {
+        font-size: 2.25rem;
+        font-weight: 800;
+        color: #1F2937;
+        text-align: center;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+    }
+    .section-2 .boxes-and-texts
+    {
+        display: flex;
+        justify-content: center;
+        gap: 3rem;
+        margin-bottom: 7rem;
+    }
+    .section-2 .boxes-and-texts .box
+    {
+        border: 0.25rem solid #3882F6;
+        border-radius: 1rem;
+        margin-bottom: 0.5rem;
+        width: 18.75rem;
+        height: 12.5rem;
+    }
+    .box img
+    {
+        max-width: 100%;
+        border-radius: 0.75rem;
+    }
+    .section-2 .boxes-and-texts .subtext
+    {
+        font-size: 1rem;
+        color: #1F2937;
+        text-align: center;
+    }
+    .section-3
+    {
+        background-color: #E5E7EB;
+    }
+    .section-3 .quote-and-author
+    {
+        padding-top: 8rem;
+        padding-bottom: 8rem;
+    }
+    .quote-and-author .quote
+    {
+        font-size: 2.25rem;
+        font-weight: lighter;
+        font-style: italic;
+        color: #1F2937;
+        line-height: 3rem;
+    }
+    .quote-and-author .author
+    {
+        font-size: 1.75rem;
+        font-weight: 800;
+        color: #1F2937;
+        text-align: end;
+        margin-right: 2rem;
+    }
+    .section-4
+    {
+        padding-top: 6rem;
+        padding-bottom: 6rem;
+        background-color: white;
+        justify-content: center;
+        color: #F9FAF8;
+    }
+    .section-4 .pop-up
+    {
+        background-color: #3882F6;
+        border-radius: 0.5rem;
+        padding: 2.5rem 7rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: content;
+    }
+    
+    .section-4 .pop-up .title
+    {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+    .section-4 button
+    {
+        border: 0.1rem solid white;
+        align-self: center;
+    }
+    
+    .footer
+    {
+        background-color: #1F2937;
+        text-align: center;
+        padding: 2rem;
+        color: #F9FAF8;
+        line-height: 1.5rem;
+    }
+    
+    .explanation
+    {
+        background-color: #3882F6;
+        padding-top: 6rem;
+        padding-bottom: 6rem;
+        padding-left: 20%;
+        padding-right: 20%;
+    }
+    
+    .explanation > *
+    {
+        color: #E5E7EB;
+        font-size: 1.75rem;
+        line-height: 2.25rem;
+    }
+    
+    .section-1 button:hover
+    {
+        background-color: blue;
+    }
+    .section-4 button:hover
+    {
+        background-color: #2356CD;
+    }
+}
 
-*{
-    font-family: "Helvetica Neue",Helvetica,"Open Sans",sans-serif;
-}
-body
+@media only screen and (min-width: 700px)
 {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-}
-.header,
-.section-1,
-.section-4,
-.footer
-{
-    padding-left: 14%;
-    padding-right: 14%;
-}
-.section-2
-{
-    padding-left: 22.5%;
-    padding-right: 22.5%;
-    background-color: white;
-}
-.section-3
-{
-    padding-left: 25%;
-    padding-right:20%;
-}
-.header,
-.section-1
-{
-    background-color: #1F2937;
-}
-.header
-{
-    padding-top: 0.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.header-logo
-{
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #F9FAF8
-}
-.subtext
-{
-    line-height: 1.5rem;
-}
-.header-link, 
-.section-1 .subtext
-{
-    font-size: 1.4rem;
-    color: #E5E7EB;
-    line-height: 2rem;
-}
-ul
-{
-    list-style-type: none;
-    display: flex;
-    gap: 1.5rem;
-}
-a
-{
-    text-decoration: none;
-}
-.section-1
-{
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
-    padding-top: 6.5rem;
-    padding-bottom: 6.5rem;
-}
-.section-1 .left .title
-{
-    font-size: 3rem;
-    font-weight: 800;
-    color: #F9FAF8;
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
-}
-button
-{
-    background-color: transparent;
-    border-radius: 0.5rem;
-    font-weight: bold;
-    font-size: 1.125rem;
-    padding: 0.5rem 2rem;
-    color: #F9FAF8;
-}
-.section-1 .left button
-{
-    background-color: #3882F6;
-    border: transparent;
-    margin-top: 50px;
-}
-.img-container
-{
-    height: 350px;
-}
-.img-container img
-{
-    max-width: 100%;
-    max-height: 100%;
-}
-.section-2 .title
-{
-    font-size: 2.25rem;
-    font-weight: 800;
-    color: #1F2937;
-    text-align: center;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-}
-.section-2 .boxes-and-texts
-{
-    display: flex;
-    justify-content: center;
-    gap: 3rem;
-    margin-bottom: 7rem;
-}
-.section-2 .boxes-and-texts .box
-{
-    border: 4px solid #3882F6;
-    border-radius: 1rem;
-    margin-bottom: 0.5rem;
-    width: 300px;
-    height: 200px;
-}
-.box img
-{
-    max-width: 100%;
-    border-radius: 0.75rem;
-}
-.section-2 .boxes-and-texts .subtext
-{
-    font-size: 1rem;
-    color: #1F2937;
-    text-align: center;
-}
-.section-3
-{
-    background-color: #E5E7EB;
-}
-.section-3 .quote-and-author
-{
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-}
-.quote-and-author .quote
-{
-    font-size: 2.25rem;
-    font-weight: lighter;
-    font-style: italic;
-    color: #1F2937;
-    line-height: 3rem;
-}
-.quote-and-author .author
-{
-    font-size: 1.75rem;
-    font-weight: 800;
-    color: #1F2937;
-    text-align: end;
-    margin-right: 2rem;
-}
-.section-4
-{
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-    background-color: white;
-    justify-content: center;
-    color: #F9FAF8;
-}
-.section-4 .pop-up
-{
-    background-color: #3882F6;
-    border-radius: 0.5rem;
-    padding: 2.5rem 7rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: content;
-}
-
-.section-4 .pop-up .title
-{
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-.section-4 button
-{
-    border: 0.1rem solid white;
-    align-self: center;
-}
-
-.footer
-{
-    background-color: #1F2937;
-    text-align: center;
-    padding: 2rem;
-    color: #F9FAF8;
-    line-height: 1.5rem;
-}
-
-.explanation
-{
-    background-color: #3882F6;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-    padding-left: 20%;
-    padding-right: 20%;
-}
-
-.explanation > *
-{
-    color: #E5E7EB;
-    font-size: 1.75rem;
-    line-height: 2.25rem;
-}
-
-.section-1 button:hover
-{
-    background-color: blue;
-}
-.section-4 button:hover
-{
-    background-color: #2356CD;
+    html
+    {
+        font-size: 16px;
+    }
 }
